fixed the vertial alignment of a few bits

--- a/desktop-app/src/app/package-item/package-item.component.scss
+++ b/desktop-app/src/app/package-item/package-item.component.scss
@@ -21,5 +21,5 @@
   vertical-align: middle;
 }
 .app-name{
-  vertical-align: middle;
+  vertical-align: sub;
 }
