--- a/desktop-app/src/app/packages/packages.component.scss
+++ b/desktop-app/src/app/packages/packages.component.scss
@@ -20,5 +20,6 @@
   line-height: 30px;
 }
 .search-width{
-  min-width: 150px;
+  min-width: 250px;
+  margin-top: -5px;
 }
